Mise à jour BootStrap 4.0 + onglets 2016/2018

--- a/source/fr-about_us.html.erb
+++ b/source/fr-about_us.html.erb
@@ -20,16 +20,16 @@ title: Kassiopé Project
       </p>
       <h2>Notre objectif</h2>
       <p>
-        Le but premier de nos projets est d’améliorer le train de vie des plus démunis. Toutefois, nous avons décidé d’exporter notre projet en dehors de la France. Deux d’entre-nous étant déjà partis en Inde suite à un échange avec notre lycée, nous avons imaginé notre projet à Ahmedabad où l’on pourrait offrir de multiples services liés à la santé de l’oeil aux populations des bidonvilles, et plus particulièrement à la communauté attachée à Manav Sadhna. Ayant enseigné dans des écoles près de l’Ashram de Gandhi nous souhaitons que nos projets s’effectuent dans ce type de communauté toujours dans le but de lutter contre l'illetrisme et toute forme de marginalisation sociale liée à la santé. 
+        Le but premier de nos projets est d’améliorer le train de vie des plus démunis. Toutefois, nous avons décidé d’exporter notre projet en dehors de la France. Deux d’entre-nous étant déjà partis en Inde suite à un échange avec notre lycée, nous avons imaginé notre projet à Ahmedabad où l’on pourrait offrir de multiples services liés à la santé de l’oeil aux populations des bidonvilles, et plus particulièrement à la communauté attachée à Manav Sadhna. Ayant enseigné dans des écoles près de l’Ashram de Gandhi nous souhaitons que nos projets s’effectuent dans ce type de communauté toujours dans le but de lutter contre l'illetrisme et toute forme de marginalisation sociale liée à la santé.
       On ne changera probablement pas le monde, mais essayer, c’est un super projet.
       </p>
       <h2>Contactez-nous</h2>
       <p>Suivez notre aventure:</p>
       <p>- sur facebook:<a target="_blank" href="https://www.facebook.com/kassiopeproject/">
-            <%= image_tag "facebook-logo.png", class: "facebook-logo-about-us img-circle" %> </a> 
+            <%= image_tag "facebook-logo.png", class: "facebook-logo-about-us img-circle" %> </a>
       </p>
       <p>- sur instagram: <a target="_blank" href="https://www.instagram.com/kassiope/">
-            <%= image_tag "instagram-logo.png", class: "instagram-logo-about-us img-circle" %> </a> 
+            <%= image_tag "instagram-logo.png", class: "instagram-logo-about-us img-circle" %> </a>
       </p>
       <p>
         Si vous avez une question ou necessitez une information supplémentaire, envoyez-nous un mail à :  <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
@@ -86,5 +86,9 @@ title: Kassiopé Project
     ga('send', 'pageview');
 
   </script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
