--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -9,7 +9,7 @@ title: Kassiopé Project
 
 <body>
 
-<div class="space">	
+<div class="space">
 </div>
 
 
@@ -26,12 +26,12 @@ title: Kassiopé Project
 
     <div class="tab-content primary-text blog">
         <div id="tab1" class="tab active">
-        	
+
         	<br>
         	<p>
-        		Notre aventure 2018 en Inde est en cours avec différente phases du projet qui se mettent en place petit à petit. Nous postons reguliérement sur cette page ainsi que sur Facebook et Instagram. 
+        		Notre aventure 2018 en Inde est en cours avec différente phases du projet qui se mettent en place petit à petit. Nous postons reguliérement sur cette page ainsi que sur Facebook et Instagram.
         	</p>
-			
+
       		<br>
       		<div class="container-fluid">
 
@@ -87,8 +87,8 @@ title: Kassiopé Project
 					<p>Cette semaine, le vent à poussé notre projet dans plusieurs directions, et même si le vent ne semblaient pas souffler en notre faveur les quelques premiers jours, le projet a maintenant toutes les resources nécessaires pour grandir et devenir auto-suffisant. </p>
 
 					<p style="text-indent: 3em;">Le premier jour (mercredi 31), notre lampe à fente est tombée en panne, rendant les dépistages de la cataracte impossibles. Mais un appel à un fournisseur Chinois a changé la donne lorsqu’il nous a mis en contact avec un de ses partenaires à Ahmedabad. Ainsi, nous sommes parvenu à nous en procurer une neuve et identique le soir-même.
-					Le lendemain, l’ampoule sur cette même lampe à fente a cessé de fonctionner. Un technicien est immédiatement venu la réparer. 
-					Le même après-midi, notre auto-réfractomètre (la machine dont nous nous servons pour faire les examens de vue) a cessé elle aussi de fonctionner. Après un peu de bricolage très rustique, celle-ci a recommencé à fonctionner tant bien que mal. 
+					Le lendemain, l’ampoule sur cette même lampe à fente a cessé de fonctionner. Un technicien est immédiatement venu la réparer.
+					Le même après-midi, notre auto-réfractomètre (la machine dont nous nous servons pour faire les examens de vue) a cessé elle aussi de fonctionner. Après un peu de bricolage très rustique, celle-ci a recommencé à fonctionner tant bien que mal.
 					Vendredi, suite a un malentendu, nous nous sommes rendu-compte que le prix demandé par notre clinique partenaire pour les chirurgies de la cataracte dépassait notre budget et rendrait toute forme de durabilité du projet impossible. Vendredi midi, suite à une conversation avec un des fondateurs de Manav Sadhna, Viren Bhai, nous avons été mis en contact avec un autre hôpital ainsi qu’une une clinique privée. Après une première rencontre avec ces deux établissements samedi matin, tous deux acceptèrent d’opérer gratuitement, sans conditions et pour une durée indéterminée tous les patients que nous venions de dépisté et que nous dépisterions à l’avenir. Non seulement cette opportunité était une solution pour notre problème financier mais elle apportait en parallèle une perspective durable au projet Kassiopé car nous allions pouvoir continuer à travailler avec ces institutions indéfiniment à prix réduit.</p>
 
 					<p>Après tant de freins, le destin a joué en notre faveur et nous avons pût continuer nos examens. Conclusion: 182 patients examinés en six jours, dont 60 cataractes et plus d’une centaine nécessitant des lunettes. </p>
@@ -136,7 +136,7 @@ title: Kassiopé Project
 
 					<p style="text-indent: 3em;">Nous avons reçu un accueil chaleureux par la communauté et nous travaillons à mettre en place les infrastructures afin de débuter notre projet cette semaine. </p>
 
-					<p style="text-indent: 3em;">Notre première orthoptiste arrive demain soir et nous allons commencer les dépistages de la cataracte mercredi matin. 
+					<p style="text-indent: 3em;">Notre première orthoptiste arrive demain soir et nous allons commencer les dépistages de la cataracte mercredi matin.
 					Nous espérons examiner une cinquantaine de patients au Tekro Community Center (un des centres satellites de Manav Sadhna) et si tout se passe correctement, nous comptons faire des dépistages sur 70 autres patients dans la semaine. </p>
 
 					<p>D’autres nouvelles et informations arriverons très vite!!!</p>
@@ -477,4 +477,8 @@ title: Kassiopé Project
     ga('send', 'pageview');
 
   </script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
