--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,7 +11,7 @@ title: Kassiopé Project
       <div class="row">
         <div class="col-sm- 2 col-md-4">
         </div>
-        <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
+        <div class="col-12 col-sm-10 col-md-8 text-center writings">
           <h1 class="slideExpandUp">Notre Projet Kassiopé</h1>
           <div class="row">
             <div class="col-sm-2">
@@ -23,7 +23,7 @@ title: Kassiopé Project
               </div>
             </div>
           -->
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-12 col-sm-8">
               <div class="button">
                 <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
               </div>
@@ -127,9 +127,9 @@ title: Kassiopé Project
 
 
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
