--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -20,8 +20,8 @@ title: Kassiopé Project
 
 <div class="tabs">
     <ul class="tab-links">
-        <li class="active"><a href="#tab1">2018</a></li>
-        <li><a href="#tab2">2016</a></li>
+        <li class="col-6 active"><a href="#tab1">2018</a></li>
+        <li class="col-6"><a href="#tab2">2016</a></li>
     </ul>
 
     <div class="tab-content primary-text blog">
@@ -478,7 +478,8 @@ title: Kassiopé Project
 
   </script>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 </body>
