Resolu problème menu deroulant

--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -61,7 +61,7 @@ title: Kassiopé Project
 
     <div class="tab-content primary-text">
         <div id="tab1" class="tab active">
-    
+
             <h2>Le problème</h2>
             <p>
               Aujourd’hui, la cataracte est la première cause de cécité dans le monde. Cette pathologie, se caractérisant par l’opacification du cristallin (lentille situé derrière la pupille permettant comme l’objectif d’un appareil photographique de faire la mise au point), empêche les rayons de parvenir jusqu’à la rétine. Cela brouille la vision de l’individu l’empêchant peu à peu d’effectuer des tâches quotidiennes jusqu’à la cécité. Bien que cette pathologie soit curable suite à une chirurgie, l’accès à ce type de soins est souvent très limité, d’autant plus que traiter cette pathologie est souvent complètement hors de prix. C’est une pathologie extrêmement handicapante puisqu’elle empêche de travailler et immobilise peu à peu la vie de l’individu touché.
@@ -76,7 +76,7 @@ title: Kassiopé Project
             <p>
               Nous projetons de faire venir deux optométristes Français à Ahmedabad en Inde afin d’effectuer un dépistage de cataractes dans les communautés associées à Manav Sadhna. Suite à ce dépistage deux ophtalmologues viendront dans le cadre d’une formation à la chirurgie de la cataracte opérer dans le Lotus Eye Clinic sous la tutelle du chirurgien ophtalmologue Dr.Shah. Nous projetons d’effectuer entre 50 et 100 chirurgies. Le prix de la formation permettra de soutenir financièrement notre projet dans le temps afin de créer un projet le plus durable possible.
             </p>
-          
+
         </div>
 
         <div id="tab2" class="tab">
@@ -95,7 +95,7 @@ title: Kassiopé Project
               <p>
                 Suite à une formation en optométrie que nous aurons suivis au préalable en France, nous irons à Ahmedabad en Août afin d’effectuer nos premiers tests d’acuité visuel. Nous avons pour objectif d’effectuer les test d’acuité visuel dans 3 ou 4 écoles situés dans les bidonvilles de Ahmedabad. Puis, nous conduirons les élèves concernés au Lotus Eye Clinic afin d’obtenir des préscriptions d’un professionnel ainsi que des lunettes adapter à chaque élève.
               </p>
-          
+
         </div>
 
       </div>
@@ -143,7 +143,8 @@ title: Kassiopé Project
   </script>
 
   <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </body>
