--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
+          <a class="navbar-brand" href="index.html">Kassiopé</a>
+    
           <a href="index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
