--- a/source/layouts/layout_en.erb
+++ b/source/layouts/layout_en.erb
@@ -32,7 +32,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Kassiopé", "en-index.html", class: "navbar-brand" %>
+          <a class="navbar-brand" href="en-index.html">Kassiopé</a>
+
           <a href="../index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
