--- a/source/en/en-index.html.erb
+++ b/source/en/en-index.html.erb
@@ -13,7 +13,7 @@ title: Kassiopé Project
       <div class="row">
         <div class="col-sm- 2 col-md-4">
         </div>
-        <div class="col-xs-12 col-sm-10 col-md-8 text-center writings">
+        <div class="col-12 col-sm-10 col-md-8 text-center writings">
           <h1 class="slideExpandUp"><%= t(:title) %></h1>
           <div class="row">
             <div class="col-sm-2">
@@ -25,7 +25,7 @@ title: Kassiopé Project
               </div>
             </div>
           -->
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-12 col-sm-8">
               <div class="button">
                 <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg"><%= t(:support) %></a>
               </div>
@@ -129,9 +129,9 @@ title: Kassiopé Project
 
 
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.0.9/scrollreveal.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
