--- a/source/stylesheets/layout/_navbar.css.scss
+++ b/source/stylesheets/layout/_navbar.css.scss
@@ -16,9 +16,10 @@ $navbar-blue: #34496F;
     }
     .navbar-toggle {
         display: block;
+        margin-top: 14px;
     }
     .navbar-collapse {
-        margin-top: 13px;
+        margin-top: 7px;
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
         overflow: hidden !important;
@@ -78,6 +79,8 @@ $navbar-blue: #34496F;
       color: white;
       line-height: 40px;
       margin-top: -1px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       padding-right: 30px;
       -webkit-transition: 0.2s linear;
       transition: 0.2s linear;
