Resolution de la marge à gauche de la page
Marge dû à la class ".row" qui doit obligatoirement se trouver dans un ".container" ou ".container-fluid"

--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -8,30 +8,27 @@ title: Kassiopé Project
 </head>
 <body>
   <div class="jumbotron">
-    <div class="row">
-      <div class="text-center col-sm-6">
-        <h1 id="believe">We believe </h1>
-      </div>
-      <div class="text-center col-sm-6">
-        <h1 id="progress">in progress !</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="text-center col-sm-6">
+          <h1 id="believe">We believe </h1>
+        </div>
+        <div class="text-center col-sm-6">
+          <h1 id="progress">in progress !</h1>
+        </div>
       </div>
     </div>
-
   </div>
 
 <!--
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
 <div class="action">
   <ul class="nav nav-tabs nav-fill">
     <li class="active"><a data-toggle="tab" href="tab1">Cataracte</a></li>
     <li><a data-toggle="tab" href="tab2">Refraction</a></li>
   </ul>
-
-
   <div class="tab-content">
     <div id="tab1" class="tab-pane fade in active">
       <h3>CATARACTE</h3>
@@ -115,7 +112,6 @@ title: Kassiopé Project
       avec sa capacité visuelle et l'OMS prévoit qu'en 2030, les erreurs de réfraction fassent parties des 10 premières maladies affectant le plus gravement
       la productivité et le quotidien de la personne.
     </p>
-
     <h2>Ce que nous proposons</h2>
     <p>
       Le projet Kassiopé vise à déployer des moyens technologiques modernes à Ahmedabad (Gujarat) en Inde afin d'offrir aux enfants malvoyant
@@ -136,10 +132,8 @@ title: Kassiopé Project
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-77432133-1', 'auto');
     ga('send', 'pageview');
-
   </script>
 
   <!-- Placed at the end of the document so the pages load faster -->
