--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,36 +8,38 @@ title: Kassiopé Project
 </head>
 <body>
     <div id="wrapper">
-      <div class="row">
-        <div class="col-sm- 2 col-md-4">
-        </div>
-        <div class="col-12 col-sm-10 col-md-8 text-center writings">
-          <h1 class="slideExpandUp">Notre Projet Kassiopé</h1>
-          <div class="row">
-            <div class="col-sm-2">
-            </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm- 2 col-md-4">
+          </div>
+          <div class="col-12 col-sm-10 col-md-8 text-center writings">
+            <h1 class="slideExpandUp">Notre Projet Kassiopé</h1>
+            <div class="row">
+              <div class="col-sm-2">
+              </div>
             <!--
             <div class="col-xs-12 col-sm-4">
               <div class="button">
                 <a target="_blank" href="https://www.youtube.com/watch?v=X_p1EzLEwCI" class="btn btn-warning btn-lg">Notre vidéo</a>
               </div>
             </div>
-          -->
-            <div class="col-12 col-sm-8">
-              <div class="button">
-                <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
+            -->
+              <div class="col-12 col-sm-8">
+                <div class="button">
+                  <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
+                </div>
               </div>
-            </div>
-            <div class="col-xs-2">
+              <div class="col-xs-2">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 arrow text-center">
-          <a href="#issue">
-            <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
-          </a>
+        <div class="row">
+          <div class="col-md-12 arrow text-center">
+            <a href="#issue">
+              <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -135,10 +137,8 @@ title: Kassiopé Project
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
       ga('create', 'UA-77432133-1', 'auto');
       ga('send', 'pageview');
-
     </script>
 
   </body>
