Resolution de la marge à gauche de la page (version EN)
Marge dû à la classe ".row" qui doit obligatoirement se trouver dans un ".container" ou ".container-fluid"

--- a/source/en/en-index.html.erb
+++ b/source/en/en-index.html.erb
@@ -10,14 +10,15 @@ title: Kassiopé Project
 </head>
 <body>
     <div id="wrapper">
-      <div class="row">
-        <div class="col-sm- 2 col-md-4">
-        </div>
-        <div class="col-12 col-sm-10 col-md-8 text-center writings">
-          <h1 class="slideExpandUp"><%= t(:title) %></h1>
-          <div class="row">
-            <div class="col-sm-2">
-            </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm- 2 col-md-4">
+          </div>
+          <div class="col-12 col-sm-10 col-md-8 text-center writings">
+            <h1 class="slideExpandUp"><%= t(:title) %></h1>
+            <div class="row">
+              <div class="col-sm-2">
+              </div>
             <!--
             <div class="col-xs-12 col-sm-4">
               <div class="button">
@@ -25,21 +26,22 @@ title: Kassiopé Project
               </div>
             </div>
           -->
-            <div class="col-12 col-sm-8">
-              <div class="button">
-                <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg"><%= t(:support) %></a>
+              <div class="col-12 col-sm-8">
+                <div class="button">
+                  <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg"><%= t(:support) %></a>
+                </div>
               </div>
-            </div>
-            <div class="col-xs-2">
+              <div class="col-xs-2">
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 arrow text-center">
-          <a href="#issue">
-            <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
-          </a>
+        <div class="row">
+          <div class="col-md-12 arrow text-center">
+            <a href="#issue">
+              <i class="fa fa-angle-down pulse" style="color: black; margin-bottom: 15px;"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
