--- a/source/en/en-action.html.erb
+++ b/source/en/en-action.html.erb
@@ -8,15 +8,16 @@ title: Kassiopé Project
 </head>
 <body>
   <div class="jumbotron">
-    <div class="row">
-      <div class="text-center col-sm-6">
-        <h1 id="believe">We believe </h1>
-      </div>
-      <div class="text-center col-sm-6">
-        <h1 id="progress">in progress !</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="text-center col-sm-6">
+          <h1 id="believe">We believe </h1>
+        </div>
+        <div class="text-center col-sm-6">
+          <h1 id="progress">in progress !</h1>
+        </div>
       </div>
     </div>
-
   </div>
 
 
