--- a/source/stylesheets/pages/_about_us.css.scss
+++ b/source/stylesheets/pages/_about_us.css.scss
@@ -15,12 +15,19 @@
 */
 
 .photo-us {
-  text-align: center;
   margin-top: 100px;
-  margin-bottom: -180px;
-  height: 450px;
-  @media screen and (min-width:1200px) {
-    width: 100%;
+  margin-bottom: 40px;
+  max-height: 450px;
+  width: 100%;
+
+  .photo-of-us {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+
   }
 }
 
