--- a/source/stylesheets/pages/_press.css.scss
+++ b/source/stylesheets/pages/_press.css.scss
@@ -1,24 +1,29 @@
 .press {
   h2 {
     margin-top: 90px;
+    text-align: center;
   }
   h3 {
     margin-top: 20px;
     text-align: left;
   }
   .article_presse {
-    margin: 20px 20px 15px -20px;
+    width: 100%;
     
     .article_courrieryvelines2018 {
-      width: 1175px;
-      height: auto;
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+      position: relative;
     }
     a {
       margin-bottom: 20px;
     }
     .article_courrieryvelines2016 {
-      width: 1175px;
-      height: auto;
+      display: block;
+      max-width: 100%;
+      max-height: 100%;
+      position: relative;
     }
   }
 
