--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -56,7 +56,7 @@ title: Kassiopé Project
         <li class="col-6"><a href="#tab2">Réfraction</a></li>
     </ul>
 
-    <div class="tab-content primary-text">
+    <div class="tab-content primary-text-action">
         <div id="tab1" class="tab active">
 
             <h2>Le problème</h2>
