Pins more scalable

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,18 +35,18 @@
           <a class="navbar-brand" href="index.html">Kassiopé</a>
 
           <a href="index.html">
-            <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
+            <%= image_tag "france-flag.png", class: "pin france-flag img-circle" %>
           </a>
           <a href="en/en-index.html">
-            <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
+            <%= image_tag "england-flag.png", class: "pin england-flag img-circle" %>
           </a>
           <a target="_blank" href="https://www.facebook.com/kassiopeproject/">
-            <%= image_tag "facebook-logo.png", class: "facebook-logo img-circle" %> 
-          </a> 
+            <%= image_tag "facebook-logo.png", class: "pin facebook-logo img-circle" %>
+          </a>
           <a target="_blank" href="https://www.instagram.com/kassiope/">
-            <%= image_tag "instagram-logo.png", class: "instagram-logo img-circle" %> 
-          </a> 
-          
+            <%= image_tag "instagram-logo.png", class: "pin instagram-logo img-circle" %>
+          </a>
+
 
         </div>
 
