resolution texte aventure-en + modif config.rb

--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -8,7 +8,7 @@ title: Kassiopé Project
 </head>
 <body>
   
-  <div class="primary-text blog">
+  <div class="primary-text blog-en">
 
     <h2>
       Our next adventure will take place between January and Mai 2018 with different stages. We will regularly post updates here, on facebook and on instagram
