--- a/source/stylesheets/pages/_adventure.css.scss
+++ b/source/stylesheets/pages/_adventure.css.scss
@@ -12,6 +12,20 @@
   }
 }
 
+.blog-en {
+  margin: 100px 80px 20px 80px;
+  text-align: justify;
+  font-size: 18px;
+  line-height: 1.7em;
+  h3 {
+    text-align: center;
+  }
+  @media screen and (max-width:800px) {
+    margin: 0px 20px 0px 20px;
+    line-height: 1.6em;
+  }
+}
+
 .img-blog {
   width: 100%;
   height: 350px;
