legere modif des onglets dans actions

--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -50,6 +50,7 @@ title: Kassiopé Project
 
 
 <!-- Onglets-->
+  <div class="onglets-action">
   <div class="tabs">
     <ul class="tab-links">
         <li class="col-6 active"><a href="#tab1">Cataracte</a></li>
@@ -97,6 +98,7 @@ title: Kassiopé Project
 
       </div>
     </div>
+  </div>
 </div>
 
 
