modif padding texte partners

--- a/source/stylesheets/pages/_about_us.css.scss
+++ b/source/stylesheets/pages/_about_us.css.scss
@@ -38,6 +38,14 @@
   max-width: 1200px;
 }
 
+.partner {
+  margin: 10px auto 20px auto;
+  padding-left: 17px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  max-width: 1200px;
+}
+
 .facebook-logo-about-us {
   position: absolute;
   margin-top: 4px;
