ajout article journal stgermain 2018

--- a/source/en/en-press.html.erb
+++ b/source/en/en-press.html.erb
@@ -13,12 +13,20 @@ title: Kassiopé Project
 
     <h2>Published press articles about Kassiopé</h2>
     <h3>Project 2018:</h3>
+    <p>Published in the Journal de Saint-Germain on the 2nd of February 2018</p>
+    <div class="article_presse">
+      <%= image_tag "article_journalstgermain2018.png", class:"article_journalstgermain2018" %>
+    </div>
+    <a href="https://www.saintgermainenlaye.fr/617/journal-de-saint-germain.htm" target="_blank">Read Online article (Number 721)</a>
+
+    <br><br>
     <p>Published in the Courrier des Yvelines on the 18th of January 2018</p>
     <div class="article_presse">
       <%= image_tag "article_courrieryvelines2018.png", class:"article_courrieryvelines2018" %>
     </div>
     <a href="https://actu.fr/ile-de-france/saint-germain-en-laye_78551/un-projet-humanitaire-saint-germain-laye-veut-redonner-vue-indiens_15070888.html" target="_blank">Read online article</a>
 
+    <br><br>
     <h3>Project 2016:</h3>
     <p>Published in the Courrier des Yvelines in April 2016</p>
     <div class="article_presse">
