--- a/source/fr-presse.html.erb
+++ b/source/fr-presse.html.erb
@@ -13,12 +13,20 @@ title: Kassiopé Project
 
     <h2>Articles parus dans la presse à propos de Kassiopé</h2>
     <h3>Projet 2018:</h3>
-    <p>Paru dans le Courrier des Yvelines le 18 janvier 2018</p>
+    <p>Paru dans Le Journal de Saint-Germain le 2 février 2018</p>
+    <div class="article_presse">
+      <%= image_tag "article_journalstgermain2018.png", class:"article_journalstgermain2018" %>
+    </div>
+    <a href="https://www.saintgermainenlaye.fr/617/journal-de-saint-germain.htm" target="_blank">Lien article en ligne (Numéro 721)</a>
+    
+    <br><br>
+    <p>Paru dans Le Courrier des Yvelines le 18 janvier 2018</p>
     <div class="article_presse">
       <%= image_tag "article_courrieryvelines2018.png", class:"article_courrieryvelines2018" %>
     </div>
     <a href="https://actu.fr/ile-de-france/saint-germain-en-laye_78551/un-projet-humanitaire-saint-germain-laye-veut-redonner-vue-indiens_15070888.html" target="_blank">Lien article en ligne</a>
 
+    <br><br>
     <h3>Projet 2016:</h3>
     <p>Paru dans le Courrier des Yvelines en Avril 2016</p>
     <div class="article_presse">
