update 16 avril 2018 (défi jeunes)

--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -16,6 +16,17 @@ title: Kassiopé Project
     
     <br><br>
 
+    <h3>16th April 2018</h3>
+      <br>
+      <p>Hello!</p>
+
+      <p style="text-indent: 3em;">What good news the Kassiopé team received last week upon learning the results of Saint Germain en Laye’s Défi Jeunes! After sending our application out in March and a skype interview carried out over three different countries, how grateful we are to learn that we have been attributed first prize in this comptetion! How beautiful it is to see that it is still possible for the five of us to work together coherently at fighting inequalities from three different continents. We also want to thank the Saint Germain en Laye municipal council for their generous financial aid prize of 1000€ and especially for empowering youth through opportunities such as the Saint Germain en Laye Défi Jeune. This prize will be dedicated towards the accommodation of our optometrist as well as to the purchase of glasses for our patients. We will continue our work in order to prove that when offered to youth, these opportunities may bare beautiful fruit.</p>
+
+      <p>A heartfelt thank you,
+      <br>The Kassiopé Team</p>
+
+    <br><br>
+
     <h3>5th March 2018</h3>
     	<br>
     	<p>Hello!</p>
