--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -35,6 +35,20 @@ title: Kassiopé Project
           <br>
           <div class="container-fluid">
 
+          	<h3>16 avril 2018</h3>
+          	<br>
+          	<p>Bonjour à tous,</p>
+
+          	<p style="text-indent: 3em;">Nous avons reçu de belles nouvelles la semaine dernière en apprenant les résultats du Défi Jeunes organisé par la mairie de Saint Germain en Laye! Après notre dossier de candidature envoyé en mars et un Skype fait sur 3 différents continents en même temps, nous sommes heureux d’apprendre que nous avons remporter le premier prix de la compétition! Nous remercions généreusement le conseil municipal de Saint Germain en Laye pour leur gracieuse aide financière de 1000 euros et également pour leur volonté de motiver les jeunes à agir, entreprendre et créer avec l’instauration du Défi Jeunes. Ce prix sera utilisé pour amener un nouvel optométriste en Inde mais également à l’achat de nouvelles paires de lunettes pour nos patients. Nous allons continuer notre travail pour prouver que, lorsque attribuées aux jeunes, ces opportunités créent de magnifiques résultats.</p>
+
+          	<p>Un grand merci à tous,
+          	<br>L’équipe Kassiopé</p>
+
+          </div>
+
+          <br><br>
+          <div class="container-fluid">
+
             <h3>5 mars 2018</h3>
               <br>
               <p>Bonjour à tous,</p>
